Changed the green button color

--- a/butoni-smqna-cvetove.html
+++ b/butoni-smqna-cvetove.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -16,7 +16,7 @@
             }
     
             .start {
-                background: green;
+                background: #80FF80;
             }
     
             .stop {
