--- a/butoni-smqna-cvetove.html
+++ b/butoni-smqna-cvetove.html
@@ -20,7 +20,7 @@
             }
     
             .stop {
-                background: red;
+                background: yellow;
             }
             </style>
 </head>
